# ml-zoomcamp

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
homework/01/: homework.ipynb  task.md
homework/02/: homework.ipynb
homework/03/: homework.ipynb  homework.md
homework/04/: homework.ipynb
homework/05/: homework.md
homework/05/homework/: Dockerfile  score-test.py  score.py
homework/06/: homework.ipynb  homework.md
homework/08/: homework.ipynb
homework/09/: Dockerfile  homework.ipynb  homework.md  lambda_function.py  test.py
homework/10/: deployment.yaml  homework.ipynb
lectures/01/: notes_from_lectures.ipynb
lectures/02/: 02-carprice.ipynb  notes_from_lecture.ipynb
lectures/03/: notes_from_lecture.ipynb
lectures/04/: notes_from_lecture.ipynb
lectures/05/: notes_from_lecture.md
lectures/05/code/: 05-predict-test.ipynb  05-train-churn-model.ipynb  Dockerfile  Pipfile  README.md  predict-test.py  predict.py  train.py
lectures/06-decision_trees_and_ensemble_learning/: notebook.ipynb  notes_from_lecture.ipynb
lectures/08-neural_networks_and_deep_learning/: notes_from_lecture.ipynb
lectures/09-serverless/: Dockerfile  cfg  lambda_function.py  notes_from_lecture.ipynb  test.py  test_aws.py
lectures/10-kubernetes_tensorflow_serving/: Pipfile  docker-compose.yml  gateway.py  image-gateway.dockerfile  image-model.dockerfile  notes_from_lecture.ipynb  test.py  tf_serving_connect.ipynb
lectures/10-kubernetes_tensorflow_serving/clothing-model/: fingerprint.pb  saved_model.pb
lectures/10-kubernetes_tensorflow_serving/ping/: Dockerfile  (+3 more)
(+4 files in other folders)
